[tool.poetry]
name = "feedlooker"
version = "0.1.0"
description = ""
authors = ["Maximilian Wolf <wunderkind.serie-0f@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.10.10"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
